# data-eng-fin-ai

./: .dockerignore  .gitignore  Dockerfile.spark  pyproject.toml  raw_transactions.parquet
.dbt/: profiles.yaml
data/: generate_data.py
etl/: ingest.py
