[project]
name = "data-eng-finance-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [  # Core runtime dependencies (empty or minimal for Spark focus)
    # Keep only essentials here if needed; we'll override with groups
]

[dependency-groups]
core = [ # For Spark/data-eng container: lightweight data tools
    "dbt-core>=1.10.13",
    "dbt-duckdb>=1.9.6",
    "delta-spark>=4.0.0",
    "duckdb>=1.4.1",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pyspark>=4.0.1",
]
dagster = [  # Optional group for orchestration
    "dagster>=1.12.0",
    "dagster-webserver>=1.12.0",
    "dbt-core>=1.10.13",
]
ml = [  # Exclude this in Spark image: heavy AI deps
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
dev = [  # Dev tools: exclude in production
    "fastapi>=0.120.4",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "uvicorn>=0.38.0",
]

[tool.uv]
default-groups = ["core", "dagster"]  # Default for local dev; override in Docker
